# emu-HMpSoC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps-env/: CMakeLists.txt  Doxyfile.in
apps-env/api/: CMakeLists.txt  clMgmtAPI.cc  clMgmtAPI.h  monAlloc.c  monAlloc.h  nocAPI.cc  nocAPI.h
apps-env/drivers/: Kbuild  cmd_monAlloc.h  cmd_noc.h  drv_genIp.c  drv_monAlloc.c  drv_monAlloc.h  drv_noc.c  drv_noc.h  genIp_utils.h  noc_hw.h
apps-env/machSuite-callStub/: CMakeLists.txt  aes_cls.cc  aes_cls.h  backprop_cls.cc  backprop_cls.h  bfs_bulk_cls.cc  bfs_bulk_cls.h  fft_strided_cls.cc  fft_strided_cls.h  gemm_blocked_cls.cc  gemm_blocked_cls.h  kmp_cls.cc  kmp_cls.h  machSuite_cls.h  machSuite_cls_helper.h  md_knn_cls.cc  md_knn_cls.h  nw_cls.cc  nw_cls.h  sort_merge_cls.cc  sort_merge_cls.h  spmv_crs_cls.cc  spmv_crs_cls.h  stenc2d_cls.cc  stenc2d_cls.h  viterbi_cls.cc  viterbi_cls.h
apps-env/misc/: status.org
apps-env/misc/comTask/: CMakeLists.txt  comTask.cc
apps-env/misc/localComTest/: CMakeLists.txt  localComTest.cc
apps-env/misc/mallocTest/: CMakeLists.txt  mallocTest.cc
apps-env/misc/memTest/: CMakeLists.txt  memTest.c
apps-env/misc/mgmtTest/: CMakeLists.txt  mgmtTest.cc
apps-env/misc/nocTest/: CMakeLists.txt  nocTest.cc
apps-env/misc/sampleTest/: CMakeLists.txt  sampleTest.cc
apps-env/mutant/: CMakeLists.txt  codeGen.cc  codeGen.h  mutantExec.cc  mutantExec.h  mutantGen.cc  mutantGen.h  mutantGraph.cc  mutantGraph.h  mutantSlave.cc
cmake-misc/: FindCereal.cmake  FindPetalinux.cmake  FindQemuXlnx.cmake  FindSCTlmSoC.cmake  FindSystemC.cmake  FindmachSuite.cmake  GenClangComplete.cmake  initPtxProject.sh  toolchain_arm.cmake  updtApps.sh
config-soc/: configSoc2_split.json  configSoc4_split.json  configSoc8_split.json
machSuite-kernel/: CMakeLists.txt  aes.cc  aes.h  aes.samples  backprop.cc  backprop.h  backprop.samples  bfs_bulk.cc  bfs_bulk.h  bfs_bulk.samples  fft_strided.cc  fft_strided.h  fft_strided.samples  gemm_blocked.cc  gemm_blocked.h  gemm_blocked.samples  kmp.cc  kmp.h  kmp.samples  md_knn.cc  md_knn.h  md_knn.samples  nw.cc  nw.h  nw.samples  sort_merge.cc  sort_merge.h  sort_merge.samples  spmv_crs.cc  spmv_crs.h  spmv_crs.samples  stenc2d.cc  stenc2d.h  stenc2d.samples  viterbi.cc  viterbi.h  viterbi.samples
mutantGui/: CMakeLists.txt  Doxyfile.in  mutantGui.cc  mutantGui.h  mutantGui.ui  popup.cc  popup.h  popup.ui
mutantGui/genAppsGraph/: C2_gr1.mgr  C2_gr2.mgr  C2_gr3.mgr  C2_save.tar  C4_gr1.mgr  C4_gr2.mgr  C4_gr3.mgr  C4_save.tar  C8_gr1.mgr  C8_gr2.mgr  C8_gr3.mgr  C8_save.tar
qemu-env/: CMakeLists.txt  qemuLauncher.cc
qemu-env/device-tree/: emu-hmpsoc_full.dtsi  emu-hmpsoc_t1-6.dtsi  emu-hmpsoc_t7-12.dtsi  pcw.dtsi  pl.dtsi  system-conf.dtsi  system-top_full.dts  system-top_t1-6.dts  system-top_t7-12.dts  zynq-pl-remoteport.dtsi
qemu-env/submodules-patch/: CMakeLists.txt  enable_emuHmpsoc_generic_devices.patch
qemu-env/utility/: CMakeLists.txt  qemuBuilder.cc  qemuBuilder.h
soc-env/: CMakeLists.txt  vp_mainFm.cc
soc-env/models/fpga/: CMakeLists.txt  hwIP.cc  hwIP.h
soc-env/models/fpga/machSuite-hwStub/: CMakeLists.txt  aes_hws.cc  aes_hws.h  backprop_hws.cc  backprop_hws.h  bfs_bulk_hws.cc  bfs_bulk_hws.h  fft_strided_hws.cc  fft_strided_hws.h  gemm_blocked_hws.cc  gemm_blocked_hws.h  kmp_hws.cc  kmp_hws.h  machSuite_hws.h  md_knn_hws.cc  md_knn_hws.h  nw_hws.cc  nw_hws.h  sort_merge_hws.cc  sort_merge_hws.h  spmv_crs_hws.cc  spmv_crs_hws.h  stenc2d_hws.cc  stenc2d_hws.h  viterbi_hws.cc  viterbi_hws.h
soc-env/models/fpga/templateBuilder/: matmult.tb  matmult.tbh
soc-env/models/monSystem/: CMakeLists.txt  monSystem.cc  monSystem.h  msConfigStruct.h
soc-env/models/noc/: CMakeLists.txt  nocBase.cc  nocBase.h  nocIpc.cc  nocIpc.h  nocMono.cc  nocMono.h  noc_helper.h  noc_hw.h
soc-env/models/structural/: CMakeLists.txt  amba_GP.cc  amba_GP.h  iconnect.cc  iconnect.h  memory.cc  memory.h  scTime.cc  scTime.h
soc-env/models/utility/: CMakeLists.txt  cerealExt.h  scTrace.cc  scTrace.h  socBuilder.cc  socBuilder.h  socConfigStruct.h
soc-env/submodules-patch/: enable_multiWriter_PsIrq.patch
